data/derived/comb/progs/unify/prog5066.ml.out
Characters 39-48:
  let fixpoint (f,b) = wwhile ((fun f -> (b = f b)),b);;
                                         ^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         ('a -> 'a) * bool
